@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  03 Sep 2010; Hans de Graaff <graaff@gentoo.org>
+  -ts-datetime-delta-1.0.2.ebuild:
+  Remove old version.
+
 *ts-datetime-delta-1.0.2-r1 (18 Aug 2010)
 
   18 Aug 2010; Hans de Graaff <graaff@gentoo.org>
